tdf#89266 SwDrawShell::GetState: fix crash on adding textbox to fontwork

Till we find a use case where it makes sense to support this, just hide
the menu item to avoid the crash.

Change-Id: Ic1df38edc38495d7899038ec2b8ad753da87d352